[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/scenes/mainMenu/button/01_buttonMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/scenes/mainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://game/scenes/mainMenu/button/fontStyle.tres" type="DynamicFont" id=3]
[ext_resource path="res://game/PNG/menu.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0, 0.356863, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -451.0
margin_right = 168.0
margin_bottom = 159.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1446.0
margin_bottom = 1340.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1386.0
margin_bottom = 1280.0
custom_constants/margin_right = 150
custom_constants/margin_top = 50
custom_constants/margin_left = 150
custom_constants/margin_bottom = 100

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/PanelContainer/MarginContainer"]
anchor_left = 0.162064
anchor_top = 0.288189
anchor_right = 0.162064
anchor_bottom = 0.288189
margin_left = 150.0
margin_top = 50.0
margin_right = 1226.0
margin_bottom = 1170.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer"]
anchor_left = -0.037064
anchor_top = 0.0188976
anchor_right = -0.037064
anchor_bottom = 0.0188976
margin_left = 150.0
margin_top = 400.0
margin_right = 1226.0
margin_bottom = 1100.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 504.0
margin_right = 1076.0
margin_bottom = 550.0

[node name="LoadGame" type="Button" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 554.0
margin_right = 1076.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 20, -76 )
custom_colors/font_color_hover = Color( 1, 0.941176, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Load Game"

[node name="Options" type="Button" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 604.0
margin_right = 1076.0
margin_bottom = 650.0
rect_pivot_offset = Vector2( 20, -76 )
custom_colors/font_color_hover = Color( 1, 0.941176, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 654.0
margin_right = 1076.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 20, -76 )
custom_colors/font_color_hover = Color( 1, 0.941176, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_button_up"]
[connection signal="button_up" from="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_button_up"]
[connection signal="button_up" from="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_button_up"]
